# chess-reasoning-zero

./: .gitignore  LICENSE  README.md  pyproject.toml  qwen-1.5b.countdown.py  requirements.txt  train_gsm8k_grpo.sh  train_ppo.sh
data/: chess_endgame.py  countdown.py
eval/: aime2024.py  gpqa.py
trainer/: ppo.py
trainer/reward_score/: __init__.py  chess_endgame.py  countdown.py
