[tool.poetry]
name = "chess-reasoning-zero"
version = "0.1.0"
description = "Reproduction of DeepSeek-R1-Zero reasoning training via RL with chess endgames"
authors = ["Shawn Chiao <mantle@gmail.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
verl = "0.1"
chess = "1.11.1"
datasets = "3.2.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
